# slam-stack

./: .gitignore  HARDWARE-GAPS.md  LICENSE  Makefile  RAM-OPTIONS.md  README.md  bootstrap.sh  bootstrap.sh.bundle  cosign.key  deploy.sh  deploy.sh.bundle  runbook.md  verify.sh  verify.sh.bundle
.github/workflows/: test.yml
clusters/base/: kustomization.yaml
clusters/commet/: flavor.yaml  kustomization.yaml
clusters/common/: cni.yaml  core.yaml  infra.yaml  kustomization.yaml  services.yaml  sources.yaml
clusters/core/: kustomization.yaml
clusters/matrix/: flavor.yaml  kustomization.yaml
clusters/minimal/: cni.yaml  identity.yaml  kustomization.yaml  platform.yaml  sources.yaml
components/: kustomization.yaml
dev/: setup.sh  setup.sh.bundle
docs/: SECURITY-MANIFESTO.md  runbook.md
flavors/rust/: README.md  (+1 more)
gpg/: cosign.pub  sops-setup.sh  sops-setup.sh.bundle
scripts/: backup-etcd.sh  backup-etcd.sh.bundle  backup-verify.sh  e2e-flux.sh  e2e-matrix.sh
talos/: controlplane.yaml  worker.yaml
tests/: Makefile  README.md
tofu/: .terraform.lock.hcl  libvirt.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
web/: Cargo.toml  Dockerfile  build.sh  build.sh.bundle  deploy.yaml  index.html
web/src/: app.rs  auth.rs  lib.rs  main.rs  middleware.rs  models.rs  server.rs  state.rs
web/src/pages/: dashboard.rs  incidents.rs  login.rs  logs.rs  mod.rs  security.rs
web/style/: main.css
workloads/sample-rust-app/: Cargo.toml  Dockerfile  README.md
workloads/sample-rust-app/manifests/: deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
workloads/sample-rust-app/src/: main.rs
(+130 files in other folders)
