[package]
name = "sample-rust-app"
version = "0.1.0"
edition = "2021"
description = "Reference Rust workload for slam-stack — minimal axum service."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
